<resources>
    <string name="app_name">Utilities</string>
    <string name="title_empty_fields">Campos incompletos</string>
    <string name="title_invalid_fields">Campos no válidos</string>
    <string name="text_aceptar">Aceptar</string>
    <string name="text_aceptar_uppercase">ACEPTAR</string>
    <string name="text_cancelar">Cancelar</string>
    <string name="text_load_again">Cargar de nuevo</string>
    <string name="text_continue">Continuar</string>
    <string name="text_correo_electronico">Correo electrónico</string>
    <string name="text_nombres">Nombres</string>
    <string name="text_apellidos">Apellidos</string>
    <string name="text_tipo_documento">Tipo de documento</string>
    <string name="text_numero_documento">Número de documento</string>
    <string name="text_contrasenia">Contraseña</string>
    <string name="text_olvidaste_contrasenia">¿Olvidaste tu contraseña?</string>
    <string name="text_resetear_contrasenia">Digita el correo electrónico con el que te registraste.</string>
    <string name="text_acepto_terminos_condiciones">Acepto los términos y condiciones</string>
    <string name="text_ingresar_ahora">Ingresar ahora</string>
    <string name="text_registrarme">Registrarme</string>
    <string name="text_iniciar_sesion">Iniciar sesión</string>
    <string name="text_please_wait">Por favor espera...</string>
    <string name="text_empty_email">Debes ingresar tu correo electrónico.</string>
    <string name="text_valid_email">Debes ingresar una dirección válida de correo electrónico.</string>
    <string name="text_empty_name">Debes ingresar tus nombres.</string>
    <string name="text_empty_lastname">Debes ingresar tus apellidos.</string>
    <string name="text_empty_type_document">Debes seleccionar un tipo de documento.</string>
    <string name="text_empty_number_document">Debes ingresar tu número de documento.</string>
    <string name="text_empty_password">Debes ingresar una contraseña.</string>
    <string name="text_empty_password_current_password_new">Debes ingresar la actual y nueva contraseña.</string>
    <string name="text_empty_telephone">Debes ingresar tu número de celular.</string>
    <string name="text_empty_municipio">Debes seleccionar un "municipio".</string>
    <string name="text_empty_sector">Debes seleccionar un "sector".</string>
    <string name="title_empty_information">Debes aceptar recibir información de EPM</string>
    <string name="title_empty_privacy">Debes aceptar la política de privacidad</string>
    <string name="text_empty_privacy">Para poder continuar requerimos que aceptes nuestra política de privacidad.</string>
    <string name="text_empty_information">Si deseas suscribirte a las Alertas de Ituango es necesario que aceptes recibir información de EPM.</string>
    <string name="text_incorrect_email">Debes ingresar una dirección válida de correo electrónico.</string>
    <string name="text_false_terms_and_conditions">Tómate tu tiempo para que leas las condiciones de servicio y
        acéptalas para usar nuestros servicios móviles.</string>
    <string name="title_appreciated_user">Apreciado usuario</string>
    <string name="title_suscription_successful">Suscribción exitosa</string>
    <string name="text_suscription_successful">Gracias por suscribirte.</string>
    <string name="text_validate_internet">Verifica que tu dispositivo se encuentra conectado a internet.</string>
    <string name="title_active_account">Activa tu cuenta</string>
    <string name="text_active_account">Antes de ingresar debes activar tu cuenta. Accede a tu correo, busca un transactionServiceMessage de EPM estamos ahí y activa tu cuenta desde allí.</string>
    <string name="text_email_or_password_incorrect">Correo o contraseña que has ingresado no corresponden a los registrados.</string>
    <string name="text_reset_password">Revisa tu correo, te asignamos una nueva contraseña.</string>
    <string name="title_error">Lo sentimos, no podemos responderte</string>
    <string name="timeout">La solicitud está tardando demasiado. Por favor inténtalo nuevamente.</string>
    <string name="error_400">Datos incompletos.</string>
    <string name="title_error_gps">No podemos ver tu ubicación</string>
    <string name="error_gps">Ve a la configuración de tu celular y revisa las funciones que tienes activadas en tu GPS.</string>
    <string name="text_invalid_email">Debes ingresar una dirección válida de correo electrónico alterno.</string>
    <string name="text_empty_type_document_profile">Debes seleccionar un tipo de documento.</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_name">Nombres</string>
    <string name="hint_last_name">Apellidos</string>
    <string name="hint_type_document">Tipo de documento</string>
    <string name="hint_number_document">Número de documento</string>
    <string name="hint_type_person">Tipo de persona</string>
    <string name="hint_phone">Teléfono fijo</string>
    <string name="hint_cell_phone">Celular</string>
    <string name="hint_address">Dirección</string>
    <string name="hint_type_place">Tipo de vivienda</string>
    <string name="hint_country">País</string>
    <string name="hint_birthday">Fecha de nacimiento</string>
    <string name="hint_gender">Género</string>
    <string name="hint_email_alternate">Correo alterno</string>
    <string name="text_save_changes">Guardar cambios</string>
    <string name="text_tipo_documento_list">Seleccione el tipo de documento</string>
    <string name="text_tipo_de_persona_list">Seleccione el tipo de persona</string>
    <string name="text_tipo_de_vivienda_list">Seleccione el tipo de vivienda</string>
    <string name="text_tipo_de_genero_list">Seleccione su género</string>
    <string name="text_error_telephone_number">El número de celular debe contener 10 dígitos.</string>
    <string name="text_splash">Copyright © 2016 - Todos los derechos reservados</string>
    <string name="text_version_app">versión</string>
    <string name="text_intentar">Intenta de nuevo</string>
    <string name="title_updated_app">¡Tenemos una nueva versión!</string>
    <string name="text_updated_app">Por eso te enviaremos a la tienda de aplicaciones para que actualices nuestra aplicación móvil.</string>
    <string name="title_noticias_lanidng">Noticias\nEPM</string>
    <string name="title_lineas_atencion_lanidng">Líneas de\nAtención</string>
    <string name="title_oficinas_atencion_lanidng">Oficinas\nde atención</string>
    <string name="title_fraude_lanidng">Reporte de fraudes\nen servicios públicos</string>
    <string name="title_factura_lanidng">Factura\nWeb</string>
    <string name="title_somos_lanidng">Redime tus\npuntos en la factura</string>
    <string name="title_contacto_lanidng">Línea Ética:\nContacto transparente</string>
    <string name="title_danios_lanidng">Reporte\nde daños</string>
    <string name="title_eventos_lanidng">Eventos\nEPM</string>
    <string name="title_gas_lanidng">Estaciones de gas\nnatural vehicular</string>
    <string name="title_terminos_condiciones">Términos y condiciones</string>
    <string name="title_estamos_ahi">Por tí, estamos ahí</string>
    <string name="title_mi_perfil">Editar mi perfil</string>
    <string name="title_factura_web">Factura Web</string>
    <string name="title_mis_facturas">Mis facturas</string>
    <string name="title_inscribir_contrato">Inscribir contrato</string>
    <string name="title_gestionar_contrato">Gestionar mis contratos</string>
    <string name="title_ingresar_tus_datos">Ingresa tus datos</string>
    <string name="title_pago_de_factura">Pago de facturas</string>
    <string name="title_reporte_de_danios">Reporte de daños</string>
    <string name="title_historico">Histórico</string>
    <string name="title_detalle_factura">Detalle de consumo</string>
    <string name="title_contacto_transparente">Contacto Transparente</string>
    <string name="title_eventos">Eventos EPM</string>
    <string name="title_noticias">Noticias EPM</string>
    <string name="title_detalle">Detalle</string>
    <string name="title_somos">Redime tus puntos en la factura</string>
    <string name="title_oficinas_de_atencion">Oficinas de atención</string>
    <string name="title_estaciones_de_gas">Estaciones de gas natural vehicular</string>
    <string name="subtitle_splash">Copyright © 2019 - Todos los derechos reservados</string>
    <string name="menu_start">Inicio</string>
    <string name="menu_my_profile">Mi perfil</string>
    <string name="menu_change_password">Cambiar contraseña</string>
    <string name="menu_log_off">Cerrar sesión</string>
    <string name="menu_share_app">Compartir </string>
    <string name="menu_qualify_app">Calificar</string>
    <string name="menu_register">Registrarme</string>
    <string name="menu_sign_in">Iniciar sesión</string>
    <string name="menu">Menú</string>
    <string name="menu_open">Abrir</string>
    <string name="menu_close">Cerrar</string>
    <string name="menu_knowapp">Dar a conocer la APP</string>
    <string name="notification">Notification</string>
    <string name="menu_notification">Notificaciones</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="text_change_password">Puedes cambiar en éste momento la contraseña de acceso a la aplicación. Recuerda cambiarla periódicamente por seguridad.</string>
    <string name="current_password">Contraseña actual</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="view_password">Mostrar contraseña</string>
    <string name="btn_change_password">Cambiar contraseña</string>
    <string name="message_change_password_empty">Debes ingresar la actual y nueva contraseña.</string>
    <string name="message_successful_change_password">¡Tu contraseña se ha actualizado con éxito!</string>
    <string name="title_head_factura_web">Factura Web</string>
    <string name="message_elegir_opcion">Elige una opción para consultar tu factura:</string>
    <string name="check_consultar_contrato">Consultar por número de contrato</string>
    <string name="check_consultar_referencia">Consultar por referente de pago</string>
    <string name="text_digitar_numero">Digita el número en este campo ...</string>
    <string name="text_btn_consultar_ahora">Consultar ahora</string>
    <string name="text_sin_facturas_inscritas">No tienes contratos inscritos</string>
    <string name="text_informacion_facturas_sin_inscribir">Para realizar consultas y pagos de tus facturas, es necesario que ingreses un número de referente o número de contrato.</string>
    <string name="text_total">Suma total:</string>
    <string name="text_totalAPagar">$ 0</string>
    <string name="btn_pagar">Iniciar pago</string>
    <string name="btn_adicionar_factura">Adicionar otra factura a la consulta</string>
    <string name="btn_ir_a_consultar">Ir a consultar</string>
    <string name="text_valor_a_pagar_detalle_factura">Valor a pagar</string>
    <string name="btn_acept">Aceptar</string>
    <string name="text_address">Dirección:</string>
    <string name="text_schedule">Horarios:</string>
    <string name="Alertas_splash">Alertas Ituango</string>
    <string name="title_recuperation_subscription">Recuperar suscripción</string>
    <string name="text_ask_turn">Pedir turno</string>
    <string name="hint_name_ask_turn">Escribe tu name completo</string>
    <string name="cancel_button_text">Cancelar</string>
    <string name="text_do_you_ask_your_name">¿Cúal es tu name?</string>
    <string name="text_only_letter">abcdefghijklmnopqrstuvwxyzáéíóúñ ABCDEFGHIJKLMNOPQRSTUVWXYZÁÉÍÓÚÑ</string>
    <string name="subTitleContract">Escribe tu número de contrato</string>
    <string name="descriptionContract">Lo encuentras en tu factura en la\nparte superior izquierda:</string>
    <string name="text_hint_contracts">Número de contrato</string>
    <string name="text_button_download_PDF">Descargar PDF</string>
</resources>