<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/template_relativeLayout_generalView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_opacity"
    android:clickable="false"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="285dp"
            android:layout_height="170dp">

            <app.epm.com.utilities.controls.CustomTextViewBold
                android:id="@+id/template_textView_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/green_oficinasdeatencion_reportedanios_estacionesgas"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/template_imageView_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/template_textView_title" />

            <ProgressBar
                android:id="@+id/template_progress_loadImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

        </RelativeLayout>

        <app.epm.com.utilities.controls.CustomTextViewBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_address"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textStyle="bold" />

        <app.epm.com.utilities.controls.CustomTextViewNormal
            android:id="@+id/template_textView_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

        <app.epm.com.utilities.controls.CustomTextViewBold
            android:id="@+id/template_textView_titleSchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_schedule"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textStyle="bold" />

        <app.epm.com.utilities.controls.CustomTextViewNormal
            android:id="@+id/template_textView_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

        <app.epm.com.utilities.controls.CustomButtonNormal
            android:id="@+id/template_button_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@null"
            android:text="@string/btn_acept"
            android:clickable="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/btn_green_factura" />
    </LinearLayout>

</RelativeLayout>